# Student_Database

./: .gitignore  CMakeLists.txt  README.md  admission-list.txt
docs/: student.md
include/: student.hpp
include/Student_Database/: student.hpp
src/: main.cpp  student.cpp
tests/: candidate-list.txt  main.cpp  test2.cpp
tests/test1/: candidate-list.txt  main.cpp
tests/test2/: test2.cpp
